# Cordis-gm

./: .dockerignore  .env  .env.example  .gitignore  .npmrc  Dockerfile  README.md  docker-compose.yml  index.html  livekit.yaml  metadata.json  nginx-main.conf  nginx.conf  package-lock.json  package.json  patch_nav.py  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: eas-build.yml  mobile-image.yml  tauri-release.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: cluster.ts  config.ts  index.ts  metrics.ts
backend/src/db/: migrate.ts  pool.ts
backend/src/mediasoup/: index.ts
backend/src/middleware/: auth.ts  botAuth.ts  messageLimiter.ts  userRateLimits.ts
backend/src/queues/: index.ts
backend/src/redis/: client.ts
backend/src/routes/: admin.ts  apps.ts  auth.ts  automations.ts  bookmarks.ts  bots.ts  channels.ts  dms.ts  epicgames.ts  events.ts  feedback.ts  files.ts  friends.ts  games.ts  kick.ts  livekit.ts  messages.ts  notes.ts  notifications.ts  og.ts  polls.ts  push.ts  servers.ts  spotify.ts  status.ts  steam.ts  twitch.ts  upload.ts  users.ts  youtube.ts
backend/src/routes/developer/: applications.ts  bots.ts  index.ts
backend/src/routes/oauth2/: authorize.ts  bot-invite.ts  index.ts  token.ts  userinfo.ts
backend/src/routes/v1/: channels.ts  commands.ts  guilds.ts  index.ts  users.ts
backend/src/services/: automations.ts  email.ts  expoPush.ts  healthChecker.ts  push.ts  r2.ts  spotifyPoller.ts  storage.ts  totp.ts
backend/src/socket/: index.ts
backend/src/types/: index.ts
backend/src/workers/: notificationWorker.ts
load-tests/: README.md  k6-http.js  k6-websocket.js
mobile/: .dockerignore  .env.example  Dockerfile  app.json  docker-nginx.conf  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx  dms.tsx  friends.tsx  index.tsx  profile.tsx
mobile/app/(app)/channel/: [id].tsx
mobile/app/(app)/dm/: [userId].tsx
mobile/app/(app)/member-list/: [serverId].tsx
mobile/app/(app)/server-settings/: [serverId].tsx
mobile/app/(app)/user-profile/: [userId].tsx
mobile/app/(auth)/: login.tsx  register.tsx
mobile/src/: api.ts  config.ts  i18n.ts  notifications.ts  socket.ts  storage.ts  storage.web.ts  store.ts  theme.ts
mobile/src/components/: MessageBubble.tsx  MessageInput.tsx  UserAvatar.tsx
mobile/web/: index.html  package.json  vite.config.ts
mobile/web/src/: App.tsx  api.ts  socket.ts  store.ts
mobile/web/src/pages/: Channel.tsx  DM.tsx  DMs.tsx  Friends.tsx  Layout.tsx  Login.tsx  Profile.tsx  Register.tsx  Servers.tsx
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: cordis-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
pgbouncer/: Dockerfile  entrypoint.sh
postgres/: init.sql  seed.sql
public/: get-app.html  manifest.json  noise-processor.js  splashscreen.html  sw.js
public/lottie/: bubbles.json  confetti.json  sakura.json  snow.json  sparkles.json
scripts/: gen-lottie.mjs
src/: App.tsx  AppsMarketplace.tsx  AutomationEditor.tsx  BlogPage.tsx  DeveloperPortal.tsx  ImageCropModal.tsx  LevelUp.css  MagicCircle.css  ScreenPicker.tsx  StatusPage.tsx  SupportPage.tsx  TitleBar.tsx  VoiceDiagnostics.tsx  api.ts  audioLoopback.ts  gifCrop.ts  i18n.ts  index.css  livekit.ts  main.tsx  mediasoup.ts  socket.ts  sounds.ts  webrtc.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rtc_linux.rs
src/cordyn-ui/: Avatar.tsx  ChannelsPanel.tsx  ChatPanel.tsx  CmdK.tsx  Composer.tsx  CordynErrorBoundary.tsx  CordynShell.tsx  DMProfile.tsx  DMSidebar.tsx  MembersPanel.tsx  Message.tsx  ServerRail.tsx  ServersPopup.tsx  TitleBar.tsx  adapters.ts  cordyn.css  index.ts  tokens.css  types.ts
src/developer/: developerApi.ts
src/oauth2/: OAuthConsent.tsx
src/rtc/: engine.ts  native_linux.ts  playback.ts  screen.ts
src/types/: gifenc.d.ts
