[package]
name = "cordyn"
version = "0.2.978"
description = "Cordyn — platforma dla twórców"
authors = ["GrimorDev"]
license = "MIT"
repository = "https://github.com/GrimorDev/Cordis-gm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.13"
base64 = "0.22"
