[package]
name = "cordyn"
version = "0.2.1235"
description = "Cordyn — platforma dla twórców"
authors = ["GrimorDev"]
license = "MIT"
repository = "https://github.com/GrimorDev/Cordis-gm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.13"
base64 = "0.22"
# WebView2 COM bindings — used to auto-grant microphone/camera permission so we
# can drop --use-fake-ui-for-media-stream and let getDisplayMedia show the native
# screen picker (choose screen/window/tab). Version MUST match wry's (^0.38 for
# Tauri 2.10.x / wry 0.55) or the ICoreWebView2 types won't unify.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
# webkit2gtk is already a transitive dep via wry; we add it explicitly so we
# can call connect_permission_request to auto-allow mic/camera access.
webkit2gtk = { version = "2", features = ["v2_2"] }
# glib (same 0.18 line webkit2gtk uses) — for ObjectExt::set_property to toggle
# the WebKitSettings `enable-webrtc` property (enables RTCPeerConnection).
glib = "0.18"

# ── Native WebRTC for Linux ────────────────────────────────────────────────────
# webrtc-rs: full WebRTC stack (ICE, DTLS, SRTP, RTP) — eliminates the
# dependency on WebKitGTK's built-in WebRTC which is disabled by default.
# We expose a JS RTCPeerConnection polyfill backed by this native stack so
# the existing engine.ts works on all Linux systems regardless of WebKit version.
webrtc = "0.11"
# cpal: cross-platform audio I/O (mic capture + speaker playback)
cpal = "0.15"
# opus: Opus codec for voice encoding/decoding
opus = "0.3"
# tokio channels for mic broadcast + audio ring buffer comms
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
# bytes — used directly for Sample::data in webrtc-rs
bytes = "1"
