[package]
name = "cordyn"
version = "0.2.1297"
description = "Cordyn — platforma dla twórców"
authors = ["GrimorDev"]
license = "MIT"
repository = "https://github.com/GrimorDev/Cordis-gm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# time 0.3.48 reworked format_description internals (new ModifierValue/HourBase
# impls) and now conflicts (E0119 coherence error) with tauri-utils 2.9.2's
# blanket `impl<T: Into<Number>> From<T> for Value`. Pin to the last good
# release until a tauri-utils version that resolves this is available.
time = "=0.3.47"
# 2026-06-14: danielrh published a coordinated bump of alloc-no-stdlib (->3.0.0),
# alloc-stdlib (->0.2.3) and brotli-decompressor (->5.0.2). Both alloc-stdlib
# 0.2.3 and brotli-decompressor 5.0.2 widened their alloc-no-stdlib requirement
# to ">=2.0.4,<4", so Cargo resolves that edge to the new 3.0.0 — while brotli
# 8.0.3 itself still requires alloc-no-stdlib "^2.0" (locked to 2.0.4). Two
# incompatible alloc_no_stdlib versions then coexist, so StandardAlloc (impl'd
# against 3.0.0 via alloc-stdlib) doesn't satisfy the Allocator bounds
# brotli-decompressor needs (E0277). Pin both brotli-decompressor and
# alloc-stdlib to their last versions with a strict "^2.0" alloc-no-stdlib
# requirement until the ecosystem re-aligns.
brotli-decompressor = { version = "=5.0.1", default-features = false }
alloc-stdlib = "=0.2.2"
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico", "image-png", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.13"
base64 = "0.22"
# WebView2 COM bindings — used to auto-grant microphone/camera permission so we
# can drop --use-fake-ui-for-media-stream and let getDisplayMedia show the native
# screen picker (choose screen/window/tab). Version MUST match wry's (^0.38 for
# Tauri 2.10.x / wry 0.55) or the ICoreWebView2 types won't unify.
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
# webkit2gtk is already a transitive dep via wry; we add it explicitly so we
# can call connect_permission_request to auto-allow mic/camera access.
webkit2gtk = { version = "2", features = ["v2_2"] }
# glib (same 0.18 line webkit2gtk uses) — for ObjectExt::set_property to toggle
# the WebKitSettings `enable-webrtc` property (enables RTCPeerConnection).
glib = "0.18"

# ── Native WebRTC for Linux ────────────────────────────────────────────────────
# webrtc-rs: full WebRTC stack (ICE, DTLS, SRTP, RTP) — eliminates the
# dependency on WebKitGTK's built-in WebRTC which is disabled by default.
# We expose a JS RTCPeerConnection polyfill backed by this native stack so
# the existing engine.ts works on all Linux systems regardless of WebKit version.
webrtc = "0.11"
# cpal: cross-platform audio I/O (mic capture + speaker playback)
cpal = "0.15"
# opus: Opus codec for voice encoding/decoding
opus = "0.3"
# tokio channels for mic broadcast + audio ring buffer comms
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
# bytes — used directly for Sample::data in webrtc-rs
bytes = "1"
